# shorai

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
benches/: my_benchmark.rs
demo/render/: Cargo.toml
demo/render/src/: main.rs
examples/: render.rs
shorai/: Cargo.toml
shorai/benches/: my_benchmark.rs
shorai/src/: lib.rs  math.rs  missile.rs  pathfind.rs  pos.rs
src/: common.rs  geometry.rs  lib.rs  math.rs  missile.rs  pathfind.rs  pos.rs
