[package]
name = "shorai"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "1.7.0"
num-traits = "0.2.14"
ordered-float = "2.8.0"
rustc-hash = "1.1.0"
ultraviolet = "0.8.1"
rand = { version = "0.8.4", optional = true }

[dev-dependencies]
# Benchmarking
criterion = "0.3"

# Example: render.rs
palette = "0.6.0"
rayon = "1.5.1"
structopt = "0.3.25"
image = "0.23.14"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
lto = true
