[package]
name = "shorai"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "1.7.0"
num-traits = "0.2.14"
ordered-float = "2.8.0"
rustc-hash = "1.1.0"
ultraviolet = "0.8.1"
rand = { version = "0.8.4", optional = true }

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
lto = true
